# slack-youtube-dl-bot

./: .dockerignore  AGENTS.md  Dockerfile  Makefile  Pipfile  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-and-push-image.yml  cicd.yml  create-release.yml  test.yml  workflow.yml
slack_youtube_dl_bot/: __main__.py  job.py  process_message.py  slack_app.py  worker.py  yt_dlp_cmd.py
src/slack_youtube_dl_bot/: main.py
tests/: test___main__.py  test_process_message.py  test_worker.py
