[project]
name = "slack-youtube-dl-bot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10.10"
dependencies = [
    "aiohttp>=3.13.5",
    "click>=8.3.3",
    "logzero>=1.7.0",
    "pydantic>=2.13.3",
    "slack-bolt>=1.28.0",
    "yt-dlp>=2025.8.11",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
extend-select = ["I"]
ignore = [
    "E501",
]

[[tool.mypy.overrides]]
module = ["logzero"]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "ruff>=0.12.0",
]
